--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ hasCJKLanguage = true
 [params.author]
   thumbnail = "images/author.png"
   name = "ミサ"
-  description = "<p>このブログについてと詳しいプロフィールは<a href='/about'>こちら</a>。</p>"
+  description = "<p>このブログについてと、プロフィールは<a href='/about'>こちら</a>。</p>"
 
 
 [outputs]
